# rust_airdrop

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Tauri集成方案.md  guide.md  readme.md  局域网云盘同步方案.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: core.rs  event.rs  lib.rs  main.rs
crates/discovery/: Cargo.toml
crates/discovery/examples/: test_discovery.rs
crates/discovery/src/: lib.rs
crates/session/: Cargo.toml
crates/session/examples/: test_session.rs
crates/session/src/: event.rs  lib.rs  manager.rs  session.rs
crates/tauri-airdrop/: COMMANDS.md  USAGE.md  package-lock.json  package.json  start.sh
crates/tauri-airdrop/src/: App.tsx  index.css
crates/tauri-airdrop/src-tauri/: Cargo.toml  tauri.conf.json
crates/tauri-airdrop/src-tauri/src/: commands.rs  daemon_bridge.rs  lib.rs  main.rs  state.rs
crates/tauri-airdrop/src/hooks/: useDaemon.ts  useFileTransfer.ts  usePeers.ts
crates/tauri-airdrop/src/lib/: tauri.ts
crates/tauri-airdrop/src/store/: index.ts
crates/transfer/: Cargo.toml
crates/transfer/examples/: receive_file.rs  send_file.rs
crates/transfer/src/: endpoint.rs  event.rs  lib.rs  manager.rs  protocol.rs  receive.rs  send.rs
