[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

discovery = { path = "../discovery" }
session= { path = "../session" }
transfer= { path = "../transfer" }